# devos

./: .gitignore  boot.s  boots.i  boots.s  build_iso.sh  code  linker.ld  makefile  page_types.h  qemu ovmf  readme.md  tip.md
docs/: tip.md
include/boot/: cpu_types.h  page_types.h
isodir/boot/grub/: grub.cfg
scripts/make_cross_chain/: download_extract.sh  get_dependence.sh  make.sh
scripts/os/: build_iso.sh  compile.sh  gdb.gdb  gdb.sh  get_dependence.sh  make_iso.sh  qemu.sh  start_qemu.sh
src/: CMakeLists.txt  boot.S  boot.s  kernel.c  kernel.cpp  linker.ld  makefile  multiboot2.h  page_types.h
src/boot/: boot.S  kernel.c
src/isodir/boot/grub/: grub.cfg
src/kernel/lib/list/: CMakeLists.txt
src/kernel/mm/: CMakeLists.txt
test/isodir/boot/grub/: grub.cfg
